[project]
name = "ai_blog_writer"
version = "0.1.0"
description = "AI_Blog_Writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
ai_blog_writer = "ai_blog_writer.main:run"
run_crew = "ai_blog_writer.main:run"
train = "ai_blog_writer.main:train"
replay = "ai_blog_writer.main:replay"
test = "ai_blog_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
